# locality-maps

./: localities.cabal  pdfjam-names  places-in.csv  places-out.csv  setup-shell  stack.yaml  tester.sh
clipper-0.0.1/: Setup.hs  clipper.cabal  stack.yaml
clipper-0.0.1/Algebra/: Clipper.hsc
clipper-0.0.1/test/: Test.hs
src/: BaseMap.hs  Boundary.hs  EachMap.hs  FindLocalities.hs  Logic.hs  Main-old.hs  Main.hs  Map.hs  Municipality.hs  NewMain.hs  NewMap.hs  OverlappingMunicipalities.hs  PolygonReduce.hs  Project.hs  Queensland.hs  Settings.hs  Shapefile.hs  Shapefile2.hs  SouthAustralia.hs  SpecialCases.hs  SpecialCasesMain.hs  Types.hs  Unicode.hs  UpdatedMapper.hs  Utils.hs  Victoria.hs
src/Data/: Set.hs  Vector.hs
src/Data/Conduit/: Main.hs  Shapefile.hs
src/Graphics/: PDF.hs
