
-- documentation, see http://haskell.org/cabal/users-guide/

-- The name of the package.
name:                localities

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Generates maps of Australian localities for Wikipedia

-- A longer description of the package.
description:         It just generates maps.

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Tristan Mc Leay

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          cassowary@fastmail.fm

-- A copyright notice.
-- copyright:           

category:            Private

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/tmcl/localities.git

executable new
  hs-source-dirs:      src
  main-is: NewMain.hs
  other-modules: SpecialCases, Types
  ghc-options: -Wall -threaded
  default-extensions: OverloadedStrings, UnicodeSyntax
  build-depends:       base >=4.8 && <4.9,
                       base-unicode-symbols ==0.2.*,
                       bytestring ==0.10.*,
                       readshp,
                       cassava ==0.4.*,
                       containers ==0.5.*,
                       text ==1.2.*,
                       pretty-show ==1.6.*,
                       HPDF ==1.4.*,
                       classy-prelude,
                       vector ==0.11.*
  default-language:    Haskell2010



executable checkspecialcases
  hs-source-dirs:      src
  main-is: SpecialCasesMain.hs
  other-modules: SpecialCases, Types
  ghc-options: -Wall -threaded
  default-extensions: OverloadedStrings, UnicodeSyntax
  build-depends:       base >=4.8 && <4.9,
                       base-unicode-symbols ==0.2.*,
                       bytestring ==0.10.*,
                       cassava ==0.4.*,
                       containers ==0.5.*,
                       text ==1.2.*,
                       pretty-show ==1.6.*,
                       vector ==0.11.*
  default-language:    Haskell2010

executable checklocalities
  -- .hs or .lhs file containing the Main module.
  main-is:             OverlappingMunicipalities.hs

  
  -- Modules included in this executable, other than Main.
  ghc-options:       -Wall -threaded
  default-extensions: OverloadedStrings, UnicodeSyntax
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9,
                       shapefile-parser,
                       conduit-combinators ==1.0.*,
                       conduit-extra ==1.1.*,
                       conduit ==1.2.*,
                       chunked-data ==0.2.*,
                       process ==1.2.*,
                       text ==1.2.*,
                       bytestring ==0.10.*,
                       binary ==0.7.*,
                       blaze-builder ==0.4.*,
                       transformers ==0.4.*,
                       resourcet ==1.1.*,
                       classy-prelude,
                       mmorph,
                       filepath ==1.4.*,
                       vector ==0.11.*,
                       clipper,
                       base-unicode-symbols ==0.2.*,
                       containers ==0.5.*,
                       cassava ==0.4.*,
                       readshp

  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  other-modules: FindLocalities, Types, Utils
  

executable localities
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  
  -- Modules included in this executable, other than Main.
  other-modules:      Map, FindLocalities, Municipality, Types, Utils
  
  ghc-options:       -Wall -threaded
  default-extensions: OverloadedStrings, UnicodeSyntax
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9,
                       shapefile-parser,
                       conduit-combinators ==1.0.*,
                       conduit-extra ==1.1.*,
                       conduit ==1.2.*,
                       chunked-data ==0.2.*,
                       process ==1.2.*,
                       text ==1.2.*,
                       bytestring ==0.10.*,
                       base-unicode-symbols ==0.2.*,
                       binary ==0.7.*,
                       blaze-builder ==0.4.*,
                       transformers ==0.4.*,
                       resourcet ==1.1.*,
                       classy-prelude,
                       mmorph,
                       filepath ==1.4.*,
                       vector ==0.11.*,
                       clipper,
                       containers ==0.5.*,
                       directory ==1.2.*,
                       mtl,
                       cassava ==0.4.*,
                       HPDF ==1.4.*,
                       readshp

  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
