
-- documentation, see http://haskell.org/cabal/users-guide/

-- The name of the package.
name:                localities

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Generates maps of Australian localities for Wikipedia

-- A longer description of the package.
description:         It just generates maps.

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Tristan Mc Leay

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          cassowary@fastmail.fm

-- A copyright notice.
-- copyright:           

category:            Private

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/tmcl/localities.git

executable localities
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  
  -- Modules included in this executable, other than Main.
  other-modules:      Map, FindLocalities, Municipality, Types, Utils
  
  ghc-options:       -Wall -threaded
  default-extensions: OverloadedStrings, UnicodeSyntax
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base,
                       shapefile-parser,
                       conduit-combinators,
                       conduit-extra,
                       conduit,
                       chunked-data,
                       process,
                       text,
                       bytestring,
                       base-unicode-symbols,
                       binary,
                       blaze-builder,
                       transformers,
                       resourcet,
                       classy-prelude,
                       mmorph,
                       filepath,
                       vector,
                       clipper,
                       containers,
                       directory,
                       mtl,
                       cassava,
                       HPDF,
                       readshp

  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
